Margins and finsihed 1.3

--- a/Homework/HW_1/mystyle.sty
+++ b/Homework/HW_1/mystyle.sty
@@ -3,4 +3,5 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{longtable}
-\setcounter{secnumdepth}{0}
+\usepackage[margin=0.5in]{geometry} %used to set the margins
+\setcounter{secnumdepth}{0} %used to get rid of section numbers
